<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/photo1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:scaleType="center"
        android:src="@drawable/rick1" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="230sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/intro"
        android:textColor="@android:color/black"
        android:fontFamily="cursive"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/scrolldown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/intro"
        android:paddingLeft="16dp"
        android:text="Scroll Down to Start"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/photo1"
        android:paddingTop="12dp"
        android:orientation="vertical"
        android:background="#ECEFF1">

        <TextView
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:text="@string/question1"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <CheckBox
                android:id="@+id/Q1_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="... give you up"
                android:layout_marginLeft="24dp"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/Q1_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="... let you down"
                android:layout_marginLeft="24dp"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/Q1_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="... run around and desert you"
                android:layout_marginLeft="24dp"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/Q1_option4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="... make you cry"
                android:layout_marginLeft="24dp"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/Q1_option5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="... say goodbye"
                android:layout_marginLeft="24dp"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/Q1_option6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="... tell a lie and hurt you"
                android:layout_marginLeft="24dp"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/Q1_option7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="All of the above"
                android:layout_marginLeft="24dp"
                android:textAppearance="?android:textAppearanceMedium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/question2"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <CheckBox
                android:id="@+id/Q2_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Together Forever"
                android:layout_marginLeft="24dp"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/Q2_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Whenever You Need Somebody"
                android:layout_marginLeft="24dp"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/Q2_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="It Would Take a Strong Strong Man"
                android:layout_marginLeft="24dp"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/Q2_option4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I Should Be So Lucky"
                android:layout_marginLeft="24dp"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/Q2_option5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="None of the above"
                android:layout_marginLeft="24dp"
                android:textAppearance="?android:textAppearanceMedium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/question3"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <EditText
                android:id="@+id/middlename_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Type the answer here"
                android:inputType="textCapWords"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="12dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/question4"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/true_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="True"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/false_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="False"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/question5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/question5"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <RadioGroup

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/Q5_option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="Rickraffed"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/Q5_option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="Rickastlayed"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/Q5_option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="Rickrolled"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/Q5_option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="Rickdirected"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/Q5_option5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="None of the above"
                    android:textAppearance="?android:textAppearanceMedium" />

            </RadioGroup>

        <Button
            android:id="@+id/score_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Get Score"
            android:onClick="getScore"
            android:hint="@string/getScoreHint"
            android:textAllCaps="true"
            android:textColor="#E0F7FA"
            android:background="#C51162"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <Button
            android:id="@+id/reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="Reset"
            android:onClick="resetQuiz"
            android:textAllCaps="true"
            android:textColor="#E0F7FA"
            android:background="#01579B"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    </LinearLayout>
</RelativeLayout>
</ScrollView>